src/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';'

    7 feature_list: feature_list feature
    8             | %empty

    9 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID optional_assign ';'
   11        | error ';'

   12 formals: formal_list
   13        | %empty

   14 formal_list: formal_list ',' formal
   15            | formal

   16 formal: OBJECTID ':' TYPEID

   17 expr: OBJECTID ASSIGN expr
   18     | expr '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr '.' OBJECTID '(' exprs ')'
   20     | OBJECTID '(' exprs ')'
   21     | IF expr THEN expr ELSE expr FI
   22     | WHILE expr LOOP expr POOL
   23     | '{' stmts '}'
   24     | LET let
   25     | CASE expr OF case_list ESAC
   26     | NEW TYPEID
   27     | ISVOID expr
   28     | expr '+' expr
   29     | expr '-' expr
   30     | expr '*' expr
   31     | expr '/' expr
   32     | '~' expr
   33     | expr '<' expr
   34     | expr LE expr
   35     | expr '=' expr
   36     | NOT expr
   37     | '(' expr ')'
   38     | OBJECTID
   39     | INT_CONST
   40     | STR_CONST
   41     | BOOL_CONST

   42 exprs: expr_list
   43      | %empty

   44 expr_list: expr_list ',' expr
   45          | expr

   46 stmts: stmts stmt
   47      | stmt

   48 stmt: expr ';'
   49     | error ';'

   50 case_list: case_list case
   51          | case

   52 case: OBJECTID ':' TYPEID DARROW expr ';'

   53 let: OBJECTID ':' TYPEID optional_assign IN expr
   54    | OBJECTID ':' TYPEID optional_assign ',' let
   55    | error let
   56    | error IN expr

   57 optional_assign: ASSIGN expr
   58                | %empty


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 18 19 20 37
    ')' (41) 9 18 19 20 37
    '*' (42) 30
    '+' (43) 28
    ',' (44) 14 44 54
    '-' (45) 29
    '.' (46) 18 19
    '/' (47) 31
    ':' (58) 9 10 16 52 53 54
    ';' (59) 4 5 6 9 10 11 48 49 52
    '<' (60) 33
    '=' (61) 35
    '@' (64) 18
    '{' (123) 4 5 9 23
    '}' (125) 4 5 9 23
    '~' (126) 32
    error (256) 6 11 49 55 56
    CLASS (258) 4 5 6
    ELSE (259) 21
    FI (260) 21
    IF (261) 21
    IN (262) 53 56
    INHERITS (263) 5
    LET (264) 24
    LOOP (265) 22
    POOL (266) 22
    THEN (267) 21
    WHILE (268) 22
    CASE (269) 25
    ESAC (270) 25
    OF (271) 25
    DARROW (272) 52
    NEW (273) 26
    ISVOID (274) 27
    STR_CONST <symbol> (275) 40
    INT_CONST <symbol> (276) 39
    BOOL_CONST <boolean> (277) 41
    TYPEID <symbol> (278) 4 5 9 10 16 18 26 52 53 54
    OBJECTID <symbol> (279) 9 10 16 17 18 19 20 38 52 53 54
    ASSIGN (280) 17 57
    NOT (281) 36
    LE (282) 34
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8
        on right: 4 5 7
    feature <feature> (50)
        on left: 9 10 11
        on right: 7
    formals <formals> (51)
        on left: 12 13
        on right: 9
    formal_list <formals> (52)
        on left: 14 15
        on right: 12 14
    formal <formal> (53)
        on left: 16
        on right: 14 15
    expr <expression> (54)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 9 17 18 19 21 22 25 27 28 29 30 31 32 33 34 35 36 37 44 45 48 52 53 56 57
    exprs <expressions> (55)
        on left: 42 43
        on right: 18 19 20
    expr_list <expressions> (56)
        on left: 44 45
        on right: 42 44
    stmts <expressions> (57)
        on left: 46 47
        on right: 23 46
    stmt <expression> (58)
        on left: 48 49
        on right: 46 47
    case_list <cases> (59)
        on left: 50 51
        on right: 25 50
    case <case_> (60)
        on left: 52
        on right: 50 51
    let <expression> (61)
        on left: 53 54 55 56
        on right: 24 54 55
    optional_assign <expression> (62)
        on left: 57 58
        on right: 10 53 54


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';'

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' .

    $default  reduce using rule 6 (class)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 19


State 15

   11 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . ':' TYPEID optional_assign ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   11 feature: error ';' .

    $default  reduce using rule 11 (feature)


State 21

    9 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 13 (formals)

    formals      go to state 26
    formal_list  go to state 27
    formal       go to state 28


State 22

   10 feature: OBJECTID ':' . TYPEID optional_assign ';'

    TYPEID  shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

    9 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 32


State 27

   12 formals: formal_list .
   14 formal_list: formal_list . ',' formal

    ','  shift, and go to state 33

    $default  reduce using rule 12 (formals)


State 28

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 29

   10 feature: OBJECTID ':' TYPEID . optional_assign ';'

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 58 (optional_assign)

    optional_assign  go to state 35


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 32

    9 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 37


State 33

   14 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 38


State 34

   57 optional_assign: ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 35

   10 feature: OBJECTID ':' TYPEID optional_assign . ';'

    ';'  shift, and go to state 54


State 36

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 37

    9 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 55


State 38

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


State 39

   21 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 56


State 40

   24 expr: LET . let

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    let  go to state 59


State 41

   22 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 42

   25 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


State 43

   26 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 44

   27 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 63


State 45

   40 expr: STR_CONST .

    $default  reduce using rule 40 (expr)


State 46

   39 expr: INT_CONST .

    $default  reduce using rule 39 (expr)


State 47

   41 expr: BOOL_CONST .

    $default  reduce using rule 41 (expr)


State 48

   17 expr: OBJECTID . ASSIGN expr
   20     | OBJECTID . '(' exprs ')'
   38     | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 38 (expr)


State 49

   36 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


State 50

   32 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 67


State 51

   23 expr: '{' . stmts '}'

    error       shift, and go to state 68
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr   go to state 69
    stmts  go to state 70
    stmt   go to state 71


State 52

   37 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 72


State 53

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr
   57 optional_assign: ASSIGN expr .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 57 (optional_assign)


State 54

   10 feature: OBJECTID ':' TYPEID optional_assign ';' .

    $default  reduce using rule 10 (feature)


State 55

    9 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 82


State 56

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   21     | IF expr . THEN expr ELSE expr FI
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 57

   55 let: error . let
   56    | error . IN expr

    error     shift, and go to state 57
    IN        shift, and go to state 84
    OBJECTID  shift, and go to state 58

    let  go to state 85


State 58

   53 let: OBJECTID . ':' TYPEID optional_assign IN expr
   54    | OBJECTID . ':' TYPEID optional_assign ',' let

    ':'  shift, and go to state 86


State 59

   24 expr: LET let .

    $default  reduce using rule 24 (expr)


State 60

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   22     | WHILE expr . LOOP expr POOL
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 61

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   25     | CASE expr . OF case_list ESAC
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr

    OF   shift, and go to state 88
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 62

   26 expr: NEW TYPEID .

    $default  reduce using rule 26 (expr)


State 63

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   27     | ISVOID expr .
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 27 (expr)


State 64

   17 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 89


State 65

   20 expr: OBJECTID '(' . exprs ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 43 (exprs)

    expr       go to state 90
    exprs      go to state 91
    expr_list  go to state 92


State 66

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr
   36     | NOT expr .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 36 (expr)


State 67

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | '~' expr .
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 32 (expr)


State 68

   49 stmt: error . ';'

    ';'  shift, and go to state 93


State 69

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr
   48 stmt: expr . ';'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 94


State 70

   23 expr: '{' stmts . '}'
   46 stmts: stmts . stmt

    error       shift, and go to state 68
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '}'         shift, and go to state 95
    '('         shift, and go to state 52

    expr  go to state 69
    stmt  go to state 96


State 71

   47 stmts: stmt .

    $default  reduce using rule 47 (stmts)


State 72

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   19     | expr . '.' OBJECTID '(' exprs ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   33     | expr . '<' expr
   34     | expr . LE expr
   35     | expr . '=' expr
   37     | '(' expr . ')'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ')'  shift, and go to state 97


State 73

   34 expr: expr LE . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 98


State 74

   33 expr: expr '<' . expr
